k8s/ckan/overlays/prod/resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: odeckan # (1)
spec:
  template:
    spec:
      containers:
      - name: ode-ckan # (1)
        resources:
          requests:
            memory: 2Gi
            cpu: 1000m
          limits:
            memory: 4Gi
            cpu: 2000m
