k8s/ckan/overlays/prod/secretconfig.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: odeckan # (1)
spec:
  template:
    spec:
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          nodePublishSecretRef:
            name: kvcreds
          readOnly: true
          volumeAttributes:
            secretProviderClass: "ode-ckan-prod-secretprovider"
        name: ckan-secrets
