k8s/ckan/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # (uncomment below to use workload identity)
    # cert-manager.io/duration: 2160h0m0s
    # cert-manager.io/issuer: adcs-issuer
    # cert-manager.io/issuer-group: adcs.certmanager.csf.nokia.com
    # cert-manager.io/issuer-kind: ClusterAdcsIssuer
    # cert-manager.io/private-key-rotation-policy: Always
    # cert-manager.io/private-key-size: '4096'
    # cert-manager.io/renew-before: 360h0m0s
    # cert-manager.io/usages: client auth, server auth
  name: ode-ckan-ingress-prod
spec:
  tls:
  - hosts:
    - ode-ckan-prod.de-prod.dk
    secretName: ode-ckan-prod-ingress-tls
  - hosts:
    - data.orsted.com
    secretName: ode-ckan-data-com-ingress-tls
  - hosts:
    - data.orsted.dk
    secretName: ode-ckan-data-dk-ingress-tls
  - hosts:
    - www.data.orsted.dk
    secretName: ode-ckan-data-www-dk-ingress-tls
  - hosts:
    - www.data.orsted.com
    secretName: ode-ckan-data-www-com-ingress-tls
  rules:
  - host: ode-ckan-prod.de-prod.dk
    http:
      paths:
      - backend:
          service:
            name: odeckan-service
            port:
              number: 5000
        path: /(.*)
        pathType: ImplementationSpecific
  - host: data.orsted.com
    http:
      paths:
      - backend:
          service:
            name: odeckan-service
            port:
              number: 5000
        path: /(.*)
        pathType: ImplementationSpecific
  - host: data.orsted.dk
    http:
      paths:
      - backend:
          service:
            name: odeckan-service
            port:
              number: 5000
        path: /(.*)
        pathType: ImplementationSpecific
  - host: www.data.orsted.dk
    http:
      paths:
      - backend:
          service:
            name: odeckan-service
            port:
              number: 5000
        path: /(.*)
        pathType: ImplementationSpecific
  - host: www.data.orsted.com
    http:
      paths:
      - backend:
          service:
            name: odeckan-service
            port:
              number: 5000
        path: /(.*)
        pathType: ImplementationSpecific
status: {}
